force-app/main/default/objects/Negocio_Gastronomico__c/Negocio_Gastronomico__c.object-meta.xml
<CustomObject>
    <label>Lead x</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Numero de Registro</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Leads x</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>