force-app/main/default/objects/Negocio_Gastronomico__c/fields/C_mo_se_enter_de_ICB_Food_Service__c.field-meta.xml
<CustomField>
    <fullName>C_mo_se_enter_de_ICB_Food_Service__c</fullName>
    <label>Cómo se enteró de ICB Food Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Asesor de Ventas</fullName>
            </value>
            <value>
                <fullName>Página Web</fullName>
            </value>
            <value>
                <fullName>Recomendación de un Amigo</fullName>
            </value>
            <value>
                <fullName>Redes Sociales</fullName>
            </value>
            <value>
                <fullName>Tiendas</fullName>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>