force-app/main/default/objects/Negocio_Gastronomico__c/fields/Cliente_Contactado__c.field-meta.xml
<CustomField>
    <fullName>Cliente_Contactado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cliente Contactado</label>
    <type>Checkbox</type>
</CustomField>