force-app/main/default/objects/Negocio_Gastronomico__c/fields/Comuna__c.field-meta.xml
<CustomField>
    <fullName>Comuna__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Comuna</label>
    <referenceTo>Comuna__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>