force-app/main/default/objects/Negocio_Gastronomico__c/fields/Comuna_de_despacho__c.field-meta.xml
<CustomField>
    <fullName>Comuna_de_despacho__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Comuna de despacho</label>
    <referenceTo>Comuna__c</referenceTo>
    <relationshipLabel>Leads (Comuna de despacho)</relationshipLabel>
    <relationshipName>Leads1</relationshipName>
    <type>Lookup</type>
</CustomField>