force-app/main/default/objects/Negocio_Gastronomico__c/fields/Comuna_Web__c.field-meta.xml
<CustomField>
    <fullName>Comuna_Web__c</fullName>
    <label>Comuna web</label>
    <type>TextArea</type>
</CustomField>