force-app/main/default/objects/Negocio_Gastronomico__c/fields/Convertido_en_Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Convertido_en_Cuenta__c</fullName>
    <formula>ISPICKVAL(Estado__c, &quot;Cliente Creado&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Convertido en Cuenta</label>
    <type>Checkbox</type>
</CustomField>