force-app/main/default/objects/Negocio_Gastronomico__c/fields/Derivado_a_Asesor__c.field-meta.xml
<CustomField>
    <fullName>Derivado_a_Asesor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Derivado a Asesor</label>
    <type>Checkbox</type>
</CustomField>