force-app/main/default/objects/Negocio_Gastronomico__c/fields/detalle_de_contacto__c.field-meta.xml
<CustomField>
    <fullName>detalle_de_contacto__c</fullName>
    <label>Detalle de Contacto</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>