force-app/main/default/objects/Negocio_Gastronomico__c/fields/Detalle_de_gesti_n_de_asesor__c.field-meta.xml
<CustomField>
    <fullName>Detalle_de_gesti_n_de_asesor__c</fullName>
    <label>Detalle de gestión de asesor</label>
    <type>TextArea</type>
</CustomField>