force-app/main/default/objects/Negocio_Gastronomico__c/fields/Direcci_n_de_Despacho__c.field-meta.xml
<CustomField>
    <fullName>Direcci_n_de_Despacho__c</fullName>
    <label>Direcciòn de Despacho</label>
    <type>Address</type>
</CustomField>