force-app/main/default/objects/Negocio_Gastronomico__c/fields/Direcci_n_web__c.field-meta.xml
<CustomField>
    <fullName>Direcci_n_web__c</fullName>
    <label>Dirección web</label>
    <type>TextArea</type>
</CustomField>