force-app/main/default/objects/Negocio_Gastronomico__c/fields/Direccion__c.field-meta.xml
<CustomField>
    <fullName>Direccion__c</fullName>
    <label>Dirección</label>
    <type>Address</type>
</CustomField>