force-app/main/default/objects/Negocio_Gastronomico__c/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Negocio Gastronomico</fullName>
                <default>true</default>
                <label>Negocio Gastronomico</label>
            </value>
            <value>
                <fullName>Lead Contactado</fullName>
            </value>
            <value>
                <fullName>Prospecto</fullName>
                <label>Cliente Creado</label>
            </value>
            <value>
                <fullName>Congelado</fullName>
            </value>
            <value>
                <fullName>Cerrado Perdido</fullName>
                <isActive>false</isActive>
                <label>Cerrado Perdido</label>
            </value>
            <value>
                <fullName>Descubierto</fullName>
                <isActive>false</isActive>
                <label>Descubierto</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>