force-app/main/default/objects/Negocio_Gastronomico__c/fields/Fecha_reasignaci_n_owner__c.field-meta.xml
<CustomField>
    <fullName>Fecha_reasignaci_n_owner__c</fullName>
    <label>Fecha_reasignación owner</label>
    <type>DateTime</type>
</CustomField>