force-app/main/default/objects/Negocio_Gastronomico__c/fields/IdOwner__c.field-meta.xml
<CustomField>
    <fullName>IdOwner__c</fullName>
    <formula>OwnerId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IdOwner</label>
    <type>Text</type>
</CustomField>