force-app/main/default/objects/Negocio_Gastronomico__c/fields/Nombre_de_contacto__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_contacto__c</fullName>
    <label>Nombre de contacto *</label>
    <length>35</length>
    <type>Text</type>
</CustomField>