force-app/main/default/objects/Negocio_Gastronomico__c/fields/Nombre_de_Contacto_Web__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_Contacto_Web__c</fullName>
    <label>Nombre de Contacto Web</label>
    <type>TextArea</type>
</CustomField>