force-app/main/default/objects/Negocio_Gastronomico__c/fields/Nombre_de_Fantasia__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_Fantasia__c</fullName>
    <label>Nombre de Fantasía</label>
    <length>50</length>
    <type>Text</type>
</CustomField>