force-app/main/default/objects/Negocio_Gastronomico__c/fields/Oficina_de_Venta__c.field-meta.xml
<CustomField>
    <fullName>Oficina_de_Venta__c</fullName>
    <label>Oficina de Venta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FS00 - Santiago Maulen</fullName>
            </value>
            <value>
                <fullName>FS02 - Coquimbo</fullName>
            </value>
            <value>
                <fullName>FS03 - Temuco</fullName>
            </value>
            <value>
                <fullName>FS04 - Concepción</fullName>
            </value>
            <value>
                <fullName>FS05 - Antofagasta</fullName>
            </value>
            <value>
                <fullName>FS06 - Puerto Montt</fullName>
            </value>
            <value>
                <fullName>FS07 - Iquique</fullName>
            </value>
            <value>
                <fullName>FS08 - Curicó</fullName>
            </value>
            <value>
                <fullName>FS09 - Calama</fullName>
            </value>
            <value>
                <fullName>FS10 - Paine</fullName>
            </value>
            <value>
                <fullName>FS11 - Tienda Vitacura</fullName>
            </value>
            <value>
                <fullName>FS12 - Tienda Rendic</fullName>
            </value>
            <value>
                <fullName>FS13 - Tienda Calama</fullName>
            </value>
            <value>
                <fullName>FSE1 - Bodegas Externas</fullName>
            </value>
            <value>
                <fullName>FSE2 - Operador Logístic</fullName>
            </value>
            <value>
                <fullName>FSE3 - Frigorífico Icestar</fullName>
            </value>
            <value>
                <fullName>FSEX - FS Express</fullName>
            </value>
            <value>
                <fullName>Oficina 1</fullName>
                <isActive>false</isActive>
                <label>Oficina 1</label>
            </value>
            <value>
                <fullName>Oficina 2</fullName>
                <isActive>false</isActive>
                <label>Oficina 2</label>
            </value>
            <value>
                <fullName>Oficina 3</fullName>
                <isActive>false</isActive>
                <label>Oficina 3</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>