force-app/main/default/objects/Negocio_Gastronomico__c/fields/Proximos_Pasos__c.field-meta.xml
<CustomField>
    <fullName>Proximos_Pasos__c</fullName>
    <label>Próximos Pasos</label>
    <length>150</length>
    <type>Text</type>
</CustomField>