force-app/main/default/objects/Negocio_Gastronomico__c/fields/Que_est_s_buscando__c.field-meta.xml
<CustomField>
    <fullName>Que_est_s_buscando__c</fullName>
    <label>¿Que estás buscando?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>