force-app/main/default/objects/Negocio_Gastronomico__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Región</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>13 - Región Metropolitana</fullName>
            </value>
            <value>
                <fullName>01 - Iquique</fullName>
            </value>
            <value>
                <fullName>02 - Antofagasta</fullName>
            </value>
            <value>
                <fullName>03 - Copiapo</fullName>
            </value>
            <value>
                <fullName>04 - La Serena</fullName>
            </value>
            <value>
                <fullName>05 - Valparaiso</fullName>
            </value>
            <value>
                <fullName>06 - Rancagua</fullName>
            </value>
            <value>
                <fullName>07 - Talca</fullName>
            </value>
            <value>
                <fullName>08 - Concepción</fullName>
            </value>
            <value>
                <fullName>09 - Temuco</fullName>
            </value>
            <value>
                <fullName>10 - Puerto Montt</fullName>
            </value>
            <value>
                <fullName>11 - Coyhaique</fullName>
            </value>
            <value>
                <fullName>12 - Punta Arenas</fullName>
            </value>
            <value>
                <fullName>14 - Los Ríos</fullName>
            </value>
            <value>
                <fullName>15 - Arica</fullName>
            </value>
            <value>
                <fullName>00 - Santiago</fullName>
                <isActive>false</isActive>
                <label>00 - Santiago</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>