force-app/main/default/objects/Negocio_Gastronomico__c/fields/Region_Web__c.field-meta.xml
<CustomField>
    <fullName>Region_Web__c</fullName>
    <label>Región Web</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Región de Arica y Parinacota</fullName>
            </value>
            <value>
                <fullName>Región de Tarapacá</fullName>
            </value>
            <value>
                <fullName>Región de Antofagasta</fullName>
            </value>
            <value>
                <fullName>Región de Atacama</fullName>
            </value>
            <value>
                <fullName>Región de Coquimbo</fullName>
            </value>
            <value>
                <fullName>Región de Valparaíso</fullName>
            </value>
            <value>
                <fullName>Región Metropolitana</fullName>
            </value>
            <value>
                <fullName>Región de O’Higgins</fullName>
            </value>
            <value>
                <fullName>Región del Maule</fullName>
            </value>
            <value>
                <fullName>Región del Ñuble</fullName>
            </value>
            <value>
                <fullName>Región del Biobío</fullName>
            </value>
            <value>
                <fullName>Región de La Araucanía</fullName>
            </value>
            <value>
                <fullName>Región de Los Ríos</fullName>
            </value>
            <value>
                <fullName>Región de Los Lagos</fullName>
            </value>
            <value>
                <fullName>Región de Aysén</fullName>
            </value>
            <value>
                <fullName>Región de Magallanes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>