force-app/main/default/objects/Negocio_Gastronomico__c/fields/RUT__c.field-meta.xml
<CustomField>
    <fullName>RUT__c</fullName>
    <label>RUT</label>
    <length>10</length>
    <type>Text</type>
</CustomField>