force-app/main/default/objects/Negocio_Gastronomico__c/fields/Sucursal__c.field-meta.xml
<CustomField>
    <fullName>Sucursal__c</fullName>
    <label>Sucursal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>S001 - Suc Santiago</fullName>
            </value>
            <value>
                <fullName>S005 - Suc Antofagasta</fullName>
            </value>
            <value>
                <fullName>S002 - Suc Coquimbo</fullName>
            </value>
            <value>
                <fullName>S009 - Suc Calama</fullName>
            </value>
            <value>
                <fullName>S004 - Suc Concepción</fullName>
            </value>
            <value>
                <fullName>S007 - Suc Iquique</fullName>
            </value>
            <value>
                <fullName>S008 - Suc Curicó</fullName>
            </value>
            <value>
                <fullName>S015 - Suc Viña del Mar</fullName>
            </value>
            <value>
                <fullName>S003 - Suc Temuco</fullName>
            </value>
            <value>
                <fullName>S006 - Suc Puerto Montt</fullName>
            </value>
            <value>
                <fullName>Sucursal 1</fullName>
                <isActive>false</isActive>
                <label>Sucursal 1</label>
            </value>
            <value>
                <fullName>Sucursal 2</fullName>
                <isActive>false</isActive>
                <label>Sucursal 2</label>
            </value>
            <value>
                <fullName>Sucursal 3</fullName>
                <isActive>false</isActive>
                <label>Sucursal 3</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>