force-app/main/default/objects/Negocio_Gastronomico__c/fields/Telefono__c.field-meta.xml
<CustomField>
    <fullName>Telefono__c</fullName>
    <label>Teléfono *</label>
    <type>Phone</type>
</CustomField>