force-app/main/default/objects/Negocio_Gastronomico__c/fields/UTM_Campaign__c.field-meta.xml
<CustomField>
    <fullName>UTM_Campaign__c</fullName>
    <label>UTM Campaign</label>
    <type>TextArea</type>
</CustomField>