force-app/main/default/objects/Negocio_Gastronomico__c/fields/UTM_medium__c.field-meta.xml
<CustomField>
    <fullName>UTM_medium__c</fullName>
    <label>UTM_medium</label>
    <type>TextArea</type>
</CustomField>